--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,14 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_CXX_FLAGS "-O3 -std=c++11 -Wall -Wextra -pedantic -Wshadow")
 set(BUNDLE_EXTENSION ".app")
 
-include_directories(include)
+include_directories(include ${OPENSSL_INCLUDE_DIR})
 find_package(wxWidgets REQUIRED COMPONENTS net core base adv xrc)
-find_package(CryptoPP REQUIRED)
+# find_package(openssl REQUIRED NAMES pem.h)
 include(${wxWidgets_USE_FILE})
 file(GLOB SOURCES "src/*.cpp")
 add_executable(openicp ${SOURCES})
 target_link_libraries(openicp ${wxWidgets_LIBRARIES})
-target_link_libraries(openicp cryptopp)
+target_link_libraries(openicp crypto)
 set_target_properties(openicp PROPERTIES BUNDLE TRUE)
 
 
