--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
 bin/
+openicp
+
+# Created by https://www.gitignore.io/api/go
+
+### Go ###
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+
+# End of https://www.gitignore.io/api/go
 
 # Created by https://www.gitignore.io/api/c++,macos,linux,cmake,windows,sublimetext
 
