--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 bin/
 openicp
 */private/*
+bindata.go
 
 # Created by https://www.gitignore.io/api/go
 
@@ -56,18 +57,6 @@ openicp
 *.exe
 *.out
 *.app
-
-### CMake ###
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-build
 
 ### Linux ###
 *~
