--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,4 @@
 bin/
-openicp
-*/private/*
-bindata.go
-
-# Created by https://www.gitignore.io/api/go
-
-### Go ###
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-
-# End of https://www.gitignore.io/api/go
 
 # Created by https://www.gitignore.io/api/c++,macos,linux,cmake,windows,sublimetext
 
@@ -57,6 +35,18 @@ bindata.go
 *.exe
 *.out
 *.app
+
+### CMake ###
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+build
 
 ### Linux ###
 *~
