--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,21 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_CXX_FLAGS "-O3 -std=c++11 -Wall -Wextra -pedantic -Wshadow")
 set(BUNDLE_EXTENSION ".app")
 
+# Hack for macOS
+if (APPLE)
+	set(OPENSSL_ROOT_DIR /usr/local/opt/openssl)
+endif()
+
+find_package(openssl REQUIRED)
+if (OPENSSL_FOUND)
+    include_directories(${OPENSSL_INCLUDE_DIRS})
+    message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
+else()
+	message(FATAL "OpenSSL was not found")
+endif()
+
 include_directories(include ${OPENSSL_INCLUDE_DIR})
 find_package(wxWidgets REQUIRED COMPONENTS net core base adv xrc)
-# find_package(openssl REQUIRED NAMES pem.h)
 include(${wxWidgets_USE_FILE})
 file(GLOB SOURCES "src/*.cpp")
 add_executable(openicp ${SOURCES})
