--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,40 @@
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.10)
 project(openicpbr)
 
+# Set some basic variables
 set(CMAKE_MODULE_PATH cmake/modules/)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_CXX_FLAGS "-O3 -std=c++11 -Wall -Wextra -pedantic -Wshadow")
 set(BUNDLE_EXTENSION ".app")
 
-# Hack for macOS
-if (APPLE)
-	set(OPENSSL_ROOT_DIR /usr/local/opt/openssl)
-endif()
-
+# Get OpenSSL
 find_package(openssl REQUIRED)
 if (OPENSSL_FOUND)
-    include_directories(${OPENSSL_INCLUDE_DIRS})
+    include_directories(${OPENSSL_INCLUDE_DIR})
     message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
 else()
+	if (APPLE)
+		message(STATUS "On macOS, use: cmake -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl .")
+	endif()
 	message(FATAL "OpenSSL was not found")
 endif()
 
-include_directories(include ${OPENSSL_INCLUDE_DIR})
+# Get wxWidgets
 find_package(wxWidgets REQUIRED COMPONENTS net core base adv xrc)
 include(${wxWidgets_USE_FILE})
+
+# Configure our desired binary 
 file(GLOB SOURCES "src/*.cpp")
+include_directories(include)
 add_executable(openicp ${SOURCES})
 target_link_libraries(openicp ${wxWidgets_LIBRARIES})
 target_link_libraries(openicp crypto)
 set_target_properties(openicp PROPERTIES BUNDLE TRUE)
 
+# Add non-code install_files
+file(COPY src/ui.xrc DESTINATION ${CMAKE_BINARY_DIR})
 
+# Add `make run`
 add_custom_target(run
     COMMAND openicp
     DEPENDS openicp
