--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if (APPLE)
 	set(OPENSSL_INCLUDE_DIR "${OPENSSL_ROOT_DIR}/include")
 	find_package(OpenSSL 1.1 REQUIRED)
 endif()
-if (UNIX)
+if (UNIX AND NOT APPLE)
 	set(BUNDLE_EXTENSION ".app")
 	message(STATUS "Assuming you installed OpenSSL 1.1 on /usr directly")
 	set(OPENSSL_ROOT_DIR "/usr")
