--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 bin/
 openicp
 openssl-1.1.0h/dist
+wxWidgets-3.0.4/dist
 
 # Created by https://www.gitignore.io/api/c++,macos,linux,cmake,windows,sublimetext
 
