--- a/res/Info.plist
+++ b/res/Info.plist
@@ -28,5 +28,7 @@
 	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>${MACOSX_BUNDLE_COPYRIGHT}</string>
+	<key>LSMinimumSystemVersion</key>
+    <string>10.7.0</string>
 </dict>
 </plist>
