Melhorias no CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ endif()
 
 # Test stuff
 find_package(GTest)
-if (GTEST_FOUND)
+if(GTEST_FOUND AND NOT NO_TESTS)
 	enable_testing()
 	include_directories(${COMMON_INCLUDES})
 	file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
@@ -115,7 +115,9 @@ if (GTEST_FOUND)
 		add_dependencies(build_and_test ${_test_name})
 		add_dependencies(build_and_test_verbose ${_test_name})
 	endforeach()
-else ()
+elseif(NO_TESTS)
+	message(STATUS "Tests disabled via -DNO_TESTS=1")
+else()
 	message(STATUS "Could NOT find Google Test, testing will be disabled")
 endif()
 
