--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,14 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(CMAKE_CXX_FLAGS "-O3 -std=c++11 -Wall -Wextra -pedantic -Wshadow -g")
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 set(USE_STATIC_WXWIDGETS false)
-add_definitions(-DUSE_FAKE_ICP_ROOT)
+if(NOT USE_FAKE_ICP)
+	add_definitions(-DUSE_FAKE_ICP_ROOT)
+	message(STATUS "Using FAKE PKI root")
+endif()
+if(NOT ${OPENICP_VERSION_DEV} MATCHES "false")
+	add_definitions(-DOPENICP_VERSION_DEV)
+	message(STATUS "Will compile a development version")
+endif()
 set(TOOL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tools/")
 if (APPLE)
 	set(TOOL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tools/osx/")
