Compilando no Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,10 +42,6 @@ if(NOT OPENSSL_FOUND)
 	set(OPENSSL_ROOT_DIR "${CMAKE_SOURCE_DIR}/openssl-1.1.0h/dist/")
 	include_directories("${OPENSSL_ROOT_DIR}/include/")
 	set(OPENSSL_CRYPTO_LIBRARIES "${OPENSSL_ROOT_DIR}/lib/libcrypto.a")
-	#if(MINGW)
-	#	set(OPENSSL_CRYPTO_LIBRARIES "${OPENSSL_CRYPTO_LIBRARIES}" "${OPENSSL_ROOT_DIR}/lib/libcrypto_no_leading_char.a")
-	#	set(OPENSSL_CRYPTO_LIBRARIES "${OPENSSL_CRYPTO_LIBRARIES}")
-	#endif()
 else()
 	include_directories("${OPENSSL_INCLUDE_DIR}")
 endif()
@@ -54,9 +50,13 @@ endif()
 set(wxWidgets_USE_UNICODE true)
 set(wxWidgets_USE_STATIC false)
 message(STATUS "Looking for wxWidgets...")
+message(STATUS "${wxWidgets_ROOT_DIR}")
 find_package(wxWidgets REQUIRED COMPONENTS net core base adv xrc)
+message(STATUS "${wxWidgets_ROOT_DIR}")
 message(STATUS "Using wxWidgets ${wxWidgets_VERSION} on ${wxWidgets_USE_FILE}")
 include(${wxWidgets_USE_FILE})
+message(STATUS "Using wxWidgets ${wxWidgets_VERSION} on ${wxWidgets_INCLUDE_DIRS}")
+message(STATUS "${wxWidgets_ROOT_DIR}")
 
 # Set sources and set our "library" (this is to avoid recompilation for testing)
 file(GLOB SOURCES "src/*.cpp")
@@ -65,6 +65,9 @@ include_directories(${COMMON_INCLUDES})
 add_library(openicp_no_main_lib STATIC ${SOURCES})
 target_link_libraries(openicp_no_main_lib ${OPENSSL_CRYPTO_LIBRARIES})
 target_link_libraries(openicp_no_main_lib ${wxWidgets_LIBRARIES})
+if(MINGW)
+	target_link_libraries(openicp_no_main_lib "ws2_32")
+endif()
 
 # Configure our desired binary
 if (APPLE)
