--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,24 +10,6 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 set(CMAKE_CXX_FLAGS "-O2 -std=c++11 -Wall -Wextra -pedantic -Wshadow -g -fPIC -D__FILENAME__='\"$(subst ${CMAKE_SOURCE_DIR}/src/,,$(abspath $<))\"'")
 
-# Should we include the FakePKI?
-if(NOT USE_FAKE_ICP)
-	add_definitions(-DUSE_FAKE_ICP_ROOT)
-	message(STATUS "Using FAKE PKI root")
-endif()
-
-# Should we use the "-dev" suffix?
-if(NOT DEFINED(OPENICP_VERSION_SUFFIX))
-	set(OPENICP_VERSION_SUFFIX "dev")
-endif()
-if(OPENICP_VERSION_SUFFIX_EMPTY)
-	set(OPENICP_VERSION_SUFFIX "")
-	add_definitions(-DOPENICP_VERSION_SUFFIX_EMPTY)
-endif()
-
-add_definitions(-DOPENICP_VERSION_SUFFIX="${OPENICP_VERSION_SUFFIX}")
-message(STATUS "Using version suffix: ${OPENICP_VERSION_SUFFIX}")
-
 # Set some paths for our custom tools
 set(TOOL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tools/")
 if (APPLE)
@@ -36,20 +18,6 @@ elseif(MINGW OR WIN32)
 	set(TOOL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tools/win/")
 elseif(UNIX)
 	set(TOOL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tools/linux/")
-endif()
-
-# Get OpenSSL
-if(TRY_SYSTEM_OPENSSL)
-	find_package(OpenSSL 1.1)
-endif()
-if(NOT OPENSSL_FOUND)
-	message(STATUS "Failed to get system's OpenSSL version 1.1. Using version on openssl-1.1.0h/")
-	message(STATUS "You may need to compile it first.")
-	set(OPENSSL_ROOT_DIR "${CMAKE_SOURCE_DIR}/openssl-1.1.0h/dist/")
-	include_directories("${OPENSSL_ROOT_DIR}/include/")
-	set(OPENSSL_CRYPTO_LIBRARIES "${OPENSSL_ROOT_DIR}/lib/libcrypto.a")
-else()
-	include_directories("${OPENSSL_INCLUDE_DIR}")
 endif()
 
 # Get wxWidgets
@@ -66,7 +34,7 @@ file(GLOB SOURCES "src/*.cpp")
 list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ICPApp.cpp)
 include_directories(${COMMON_INCLUDES})
 add_library(openicp_no_main_lib STATIC ${SOURCES})
-target_link_libraries(openicp_no_main_lib ${OPENSSL_CRYPTO_LIBRARIES})
+target_link_libraries(openicp_no_main_lib ICP++)
 target_link_libraries(openicp_no_main_lib ${wxWidgets_LIBRARIES})
 target_link_libraries(openicp_no_main_lib ICP)
 if (MINGW)
@@ -176,27 +144,3 @@ elseif(UNIX)
 		WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 	)
 endif()
-
-# Test stuff
-find_package(GTest)
-if(GTEST_FOUND AND NOT NO_TESTS)
-	enable_testing()
-	include_directories(${COMMON_INCLUDES})
-	file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
-	add_custom_target(build_and_test ${CMAKE_CTEST_COMMAND} --output-on-failure)
-	add_custom_target(build_and_test_verbose ${CMAKE_CTEST_COMMAND} -V)
-	foreach(_test_file ${TEST_SRC_FILES})
-		get_filename_component(_test_name ${_test_file} NAME_WE)
-		add_executable(${_test_name} ${_test_file})
-		target_link_libraries(${_test_name} gtest gtest_main openicp_no_main_lib ${CMAKE_THREAD_LIBS_INIT} ${wxWidgets_LIBRARIES} ${OPENSSL_CRYPTO_LIBRARIES})
-		add_test(${_test_name} bin/${_test_name})
-		set_tests_properties(${_test_name} PROPERTIES TIMEOUT 5)
-		add_dependencies(build_and_test ${_test_name})
-		add_dependencies(build_and_test_verbose ${_test_name})
-	endforeach()
-elseif(NO_TESTS)
-	message(STATUS "Tests disabled via -DNO_TESTS=1")
-else()
-	message(STATUS "Could NOT find Google Test, testing will be disabled")
-endif()
-
