Compiling and running.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,21 +29,8 @@ message(STATUS "Using wxWidgets ${wxWidgets_VERSION} on ${wxWidgets_USE_FILE}")
 include(${wxWidgets_USE_FILE})
 message(STATUS "Using wxWidgets ${wxWidgets_VERSION} on ${wxWidgets_INCLUDE_DIRS}")
 
-# Set sources and set our "library" (this is to avoid recompilation for testing)
 file(GLOB SOURCES "src/*.cpp")
-list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ICPApp.cpp)
 include_directories(${COMMON_INCLUDES})
-add_library(openicp_no_main_lib STATIC ${SOURCES})
-target_link_libraries(openicp_no_main_lib ICP++)
-target_link_libraries(openicp_no_main_lib ${wxWidgets_LIBRARIES})
-target_link_libraries(openicp_no_main_lib ICP)
-if (MINGW)
-	target_link_libraries(openicp_no_main_lib "ws2_32")
-endif()
-if (APPLE)
-	target_link_libraries(openicp_no_main_lib "-framework CoreFoundation -framework Security")
-endif()
-
 # Configure our desired binary
 if (APPLE)
 	set(MACOSX_BUNDLE_BUNDLE_NAME "OpenICP-BR")
@@ -51,17 +38,26 @@ if (APPLE)
 	set(MACOSX_BUNDLE_ICON_FILE logo.icns)
 	set(MACOSX_BUNDLE_INFO_PLIST res/Info.plist)
 	set(MACOSX_PACKAGE_LOCATION "${CMAKE_BINARY_DIR}/openicp.app/Contents/")
-	add_executable(openicp MACOSX_BUNDLE ${CMAKE_CURRENT_SOURCE_DIR}/src/ICPApp.cpp)
+	add_executable(openicp MACOSX_BUNDLE "${SOURCES}")
 elseif(MINGW)
 	set(CMAKE_RC_COMPILER_INIT windres)
 	ENABLE_LANGUAGE(RC)
 	SET(CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> --use-temp-file <FLAGS> -O coff <DEFINES> -I <INCLUDES> -i <SOURCE> -o <OBJECT>")
 	add_definitions(-DwxUSE_NO_MANIFEST=1)
-	add_executable(openicp "${CMAKE_CURRENT_SOURCE_DIR}/src/ICPApp.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/res/win-res.rc")
+	add_executable(openicp "${SOURCES}" "${CMAKE_CURRENT_SOURCE_DIR}/res/win-res.rc")
 else()
-	add_executable(openicp "${CMAKE_CURRENT_SOURCE_DIR}/src/ICPApp.cpp")
+	add_executable(openicp "${SOURCES}")
 endif()
-target_link_libraries(openicp openicp_no_main_lib)
+target_link_libraries(openicp ICP++)
+target_link_libraries(openicp ${wxWidgets_LIBRARIES})
+target_link_libraries(openicp ICP)
+if (MINGW)
+	target_link_libraries(openicp "ws2_32")
+endif()
+if (APPLE)
+	target_link_libraries(openicp "-framework CoreFoundation -framework Security")
+endif()
+
 
 # Add non-code install_files
 if(MINGW)
